@@ -39,7 +39,7 @@ sub ACTION_realclean {
 
   if ( lc $basename eq lc $self->build_script ) {
     if ( $self->build_bat ) {
-      $self->log_info("Deleting $basename.bat\n");
+      $self->log_verbose("Deleting $basename.bat\n");
       my $full_progname = $0;
       $full_progname =~ s/(?:\.bat)?$/.bat/i;
 
