@@ -15,6 +15,8 @@ Revision history for Perl extension Module::Build.
  Other:
  - Replaced use of YAML.pm with YAML::Tiny; Module::Build::YAML is now
    based on YAML::Tiny as well [David Golden]
+ - Reduced amount of console output under normal operation (use --verbose
+   to see all output)
 
 0.35_02 - Mon Sep  7 22:37:42 EDT 2009
 
